Implements signin and signup
